metadataPackage_1602884205764/objects/ECM_Metadata__c.object
<CustomObject>
    <label>ECM Metadata</label>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>ECM Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECM Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CMP_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CMP Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_File_Mime_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ECM File Mime Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM_File_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ECM File Size</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCM_File_URL__c</fullName>
        <formula>IF(ISBLANK(CMP_Id__c),&quot;&quot;,$Label.Omni_ECMLink +  CMP_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eCM File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ECM File Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Metadata</label>
        <referenceTo>File_Metadata__c</referenceTo>
        <relationshipLabel>ECM Metadata</relationshipLabel>
        <relationshipName>ECM_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>